package Figurarv;

public interface Tegnbar {
    void tegn();
}
